# astro-dnssd

./: .travis.yml  Cargo.toml  README.md  azure-pipelines.yml  build.rs  wrapper.h
.github/workflows/: build.yml  test.yml
examples/: browse-drop.rs  browse.rs  register.rs
src/: browse.rs  browser.rs  ffi.rs  lib.rs  non_blocking.rs  register.rs  txt.rs
src/ffi/: apple.rs  windows.rs
src/os/: apple.rs  mod.rs  windows.rs
src/os/apple/: browse.rs  register.rs  txt.rs
src/os/windows/: browse.rs  register.rs
