[package]
name = "astro-dnssd"
version = "0.1.1"
authors = ["Jeremy Knope <jeremy@astropad.com>"]
description = "Simple & safe DNS-SD wrapper"
keywords = ["dns-sd", "dnssd", "bonjour", "zeroconf", "mdns"]
categories = ["network-programming", "api-bindings"]
repository = "https://github.com/AstroHQ/astro-dnssd"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.8"

[dev-dependencies]
env_logger = "0.7"
