[package]
name = "astro-dnssd"
version = "0.1.3"
authors = ["Jeremy Knope <jeremy@astropad.com>"]
description = "Simple & safe DNS-SD wrapper"
keywords = ["dns-sd", "dnssd", "bonjour", "zeroconf", "mdns"]
categories = ["network-programming", "api-bindings"]
repository = "https://github.com/AstroHQ/astro-dnssd"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.8"
thiserror = "1.0.20"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version =  "0.3", features = ["winsock2"], optional = true }
[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = { version =  "0.2", optional = true }

[build-dependencies]
pkg-config = "0.3.9"

[dev-dependencies]
env_logger = "0.7"

[features]
default = ["non-blocking"]
non-blocking = ["winapi", "libc"]
